--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,23 @@
 
 * {
   font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   list-style: none;
   text-decoration: none;
+}
+/* resposive  */
+@media screen and (min-width: 425px) {
+  * {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 425px) {
+}
+@media screen and (min-width: 992px) {
+  .nav-item {
+    padding-left: 40px;
+  }
+  .btn-navbar {
+    margin-left: 50px;
+  }
 }
