--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,76 @@
   font-size: 16px;
   list-style: none;
   text-decoration: none;
+  box-sizing: border-box;
 }
+
+.navbar-index {
+  z-index: 99;
+}
+
+/* animation banniere  */
+.image-container {
+  max-width: 100%;
+  height: auto;
+  position: relative;
+  padding-bottom: 70%;
+  box-sizing: border-box;
+}
+
+.image-container img {
+  position: absolute;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.image-container img.active {
+  opacity: 1;
+}
+.image-container img {
+  z-index: -1;
+}
+
+.image-container img:first-child {
+  opacity: 1;
+}
+
+@keyframes image-loop {
+  0% {
+    opacity: 0;
+  }
+  16.666% {
+    opacity: 1;
+  }
+  83.333% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.image-container img:nth-child(1) {
+  animation: image-loop 9s infinite;
+  animation-delay: 0s;
+}
+
+.image-container img:nth-child(2) {
+  animation: image-loop 9s infinite;
+  animation-delay: 3s;
+}
+
+.image-container img:nth-child(3) {
+  animation: image-loop 9s infinite;
+  animation-delay: 6s;
+}
+.image-container img:nth-child(4) {
+  animation: image-loop 9s infinite;
+  animation-delay: 9s;
+}
+
 /* resposive  */
 @media screen and (min-width: 425px) {
   * {
@@ -19,6 +88,6 @@
     padding-left: 40px;
   }
   .btn-navbar {
-    margin-left: 50px;
+    margin-left: 40px;
   }
 }
